调整部分内容

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 </h1>
 
 <h3>
-<a id="直拼英语pc客户端" class="anchor" href="#%E7%9B%B4%E6%8B%BC%E8%8B%B1%E8%AF%ADpc%E5%AE%A2%E6%88%B7%E7%AB%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>直拼英语PC客户端</h3>
+<a id="电脑客户端" class="anchor" href="#%E7%9B%B4%E6%8B%BC%E8%8B%B1%E8%AF%ADpc%E5%AE%A2%E6%88%B7%E7%AB%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>电脑客户端</h3>
 
 <p><a href="https://baidu.com">Win</a><br>
 <a href="https://baidu.com">OS X</a><br>
 <a href="https://baidu.com">Linux</a></p>
 
 <h3>
-<a id="直拼英语手机客户端" class="anchor" href="#%E7%9B%B4%E6%8B%BC%E8%8B%B1%E8%AF%AD%E6%89%8B%E6%9C%BA%E5%AE%A2%E6%88%B7%E7%AB%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>直拼英语手机客户端</h3>
+<a id="手机客户端" class="anchor" href="#%E7%9B%B4%E6%8B%BC%E8%8B%B1%E8%AF%AD%E6%89%8B%E6%9C%BA%E5%AE%A2%E6%88%B7%E7%AB%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>手机客户端</h3>
 
 <p><a href="https://baidu.com">Android</a><br>
 <a href="https://baidu.com">iOS</a></p>
